--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +22,10 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 12px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -27,6 +33,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 16px;
 }
 
 button {
@@ -35,6 +42,12 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left: auto;
+  margin-right: 16px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 48px;
+  width: 180px;
 }
 
 a {
@@ -45,4 +58,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 24px;
 }
